# particles

./: Cargo.toml  LICENSE  README.md  clippy.toml
crates/particles_ecs/: Cargo.toml
crates/particles_ecs/benches/: bench_physics_components.rs
crates/particles_ecs/src/: lib.rs
crates/particles_ecs/src/components/: common.rs  mod.rs  physics.rs  physics_components.rs  physics_obj.rs
crates/particles_ecs/src/systems/: mod.rs  physics.rs  physics_systems.rs
src/: components.rs  main.rs  systems.rs
