[package]
name = "rust-sketch-template"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"
description = "A template for processing-like sketches, using macroquad and legion"
repository = ""
documentation = ""
homepage = ""
readme = "README.md"
license = "gpl"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.3.7", default-features = false, features = ["log-impl"] }
legion = { version = "0.4.0", default-features = false, features = ["codegen"] }

[profile.dev]
opt-level = 1
