[package]
name = "particles"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"
description = "A template for processing-like sketches, using macroquad and legion"
repository = "https://github.com/kirinokirino/particles"
documentation = ""
homepage = ""
readme = "README.md"
license = "gpl"
keywords = ["game"]
categories = ["games"]

[workspace]
members = ["crates/*"]

[dependencies]
particles_ecs = {path = "crates/particles_ecs", version = "0.1.0" }
macroquad = { version = "0.3.7", default-features = false, features = ["log-impl"] }

[profile.dev]
opt-level = 1

[profile.release]
dubug = true