[package]
name = "particles_ecs"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"
description = "ECS subcrate for particles."
repository = "https://github.com/kirinokirino/particles"
documentation = ""
homepage = ""
readme = "README.md"
license = "gpl"
keywords = ["game"]
categories = ["games"]

[dependencies]
macroquad = { version = "0.3.7", default-features = false, features = ["log-impl"] }
legion = { version = "0.4.0", default-features = false, features = ["codegen"] }

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.4.3", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bench_physics_components"
harness = false
